tests/errors/duplicate-cells.futil
import "primitives/std.lib";

component main() -> () {
  cells {
    r = std_reg(32);
    r = std_reg(32);
  }
  wires { }
  control { }
}
