tests/errors/duplicate-cells.expect
---CODE---
1
---STDERR---
Error: tests/errors/duplicate-cells.futil
6 |    r = std_reg(32);
  |    ^ Name already bound by cell
